# python-repo-template

./: DESIGN.md  IMPLEMENTATION_PLAN.md  LICENSE  README.md  memories.md  pyproject.toml
.cursor/: hooks.json
.cursor/commands/: init.md  session.md
.cursor/hooks/: context-inject.sh  context-warning.sh  file-guard.sh  format.sh  git-guard.sh  log-rotate.sh  plan-guard.sh  session-end.sh  session-start.sh  sync-plan.sh  thought-capture.sh  track-files.sh
.cursor/rules/: python-stack.mdc  workflow.mdc
.cursor/skills/docker-containerization/: SKILL.md
.cursor/skills/uv-package-management/: SKILL.md
.cursor/skills/uv-package-management/references/: advanced.md  docker.md
logs/: .active  2026-01-17_12-00.md  2026-01-18_03-18.md
scripts/: usage_example.py
src/files_api/: __init__.py
src/files_api/files/: __init__.py  exceptions.py  factory.py  interface.py  local.py
src/files_api/files/handlers/: __init__.py  base.py  json_handler.py  numpy_handler.py
src/python_repo_template/: __init__.py
tests/: __init__.py  test_sample.py
tests/files/: __init__.py  test_factory.py  test_integration.py  test_json_handler.py  test_local_filesystem.py  test_numpy_handler.py
