[project]
name = "python-repo-template"
version = "0.1.0"
description = "Python repository template"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.2",
    "polars>=1.0",
    "numpy>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/python_repo_template"]

[dependency-groups]
dev = [
    "pytest>=8.0",
]
